@@ -1,6 +1,6 @@
 # TX (Transaction Demarcation) Specification compliance case tests
 
-m4_include([tx_b_5.at])
+m4_include([tx_5_19.at])
 
 m4_include([tx_3_2.at])
 m4_include([tx_3_3.at])
@@ -19,4 +19,4 @@ m4_include([tx_5_27.at])
 m4_include([tx_7_52.at])
 m4_include([tx_b_2.at])
 m4_include([tx_b_4.at])
-
+m4_include([tx_b_5.at])
